--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=Esneider23_Servicio-Stock
 sonar.organization=esneider23
+sonar.python.version=python3
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Servicio-Stock
