--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=Esneider23_Servicio-Stock
 sonar.organization=esneider23
 sonar.python.version=3.7
+sonar.python.coverage.reportPaths=coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Servicio-Stock
