--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=Esneider23_Servicio-Stock
-sonar.organization=esneider23
+sonar.projectKey=Esneider23-Servicio-Stock
+sonar.organization=Esneider23
 sonar.python.version=3.8
 sonar.python.coverage.reportPaths=coverage.xml
 # This is the name and version displayed in the SonarCloud UI.
